--- a/1주차/first/static/css/home.css
+++ b/1주차/first/static/css/home.css
@@ -1,7 +1,13 @@
-html,
+html {
+  width: 100%;
+  height: 100%;
+}
 body {
   width: 100%;
   height: 100%;
+}
+a {
+  text-decoration: none;
 }
 
 header {
@@ -20,6 +26,11 @@ header {
 .header__right {
   margin: 0px 50px 0px 50px;
 }
+.header__center {
+  display: flex;
+  align-items: center;
+  gap: 10px;
+}
 .header__right {
   display: flex;
   align-items: center;
@@ -28,9 +39,26 @@ header {
 #upload-img {
   margin-bottom: 5px;
 }
+#color-img {
+  width: 30px;
+  height: 30px;
+
+  border: none;
+  border-radius: 70px;
+  background-color: black;
+  color: white;
+  font-family: "Cafe24Ssurround";
+}
 .logo {
   font-family: "Cafe24Ssurround";
   font-size: 25px;
+  text-shadow: 2px 2px black;
+}
+#logo-front {
+  color: #ffcd69;
+}
+#logo-back {
+  color: #80b6ff;
 }
 
 .main {
@@ -56,7 +84,35 @@ header {
   justify-content: center;
   align-items: center;
 
-  padding: 20px;
+  padding-top: 40px;
+}
+.search-form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: 200px;
+  border: solid #dddddd 1px;
+  border-radius: 50px;
+  color: #202020;
+  padding: 15px 30px 15px 30px;
+  margin: 5px 10px 5px 0px;
+  text-align: left;
+}
+.search-input {
+  height: 30px;
+  border: none;
+  background: none;
+
+  display: flex;
+  align-items: center;
+}
+.search-button {
+  border: none;
+  background: none;
+
+  display: flex;
+  align-items: center;
 }
 .container {
   display: flex;
@@ -74,8 +130,9 @@ header {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
 
-  background: #fff;
+  border: solid 1px #dddddd;
   border-radius: 12px;
   box-shadow: 0 5px 10px rgba(0, 0, 0, 0.2);
 }
@@ -98,4 +155,19 @@ footer {
   justify-content: center;
   align-items: center;
   gap: 0px 10px;
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: white;
+}
+.dark-mode header .header__center #logo-front {
+  color: #80b6ff;
+}
+.dark-mode header .header__center #logo-back {
+  color: #ffcd69;
+}
+.dark-mode header .header__right #color-img {
+  background-color: white;
+  color: black;
 }
