session01 assignment - 18_박시연

--- a/1주차/first/templates/home.html
+++ b/1주차/first/templates/home.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header__left">
-            <img src="{%static 'img/Logo.png'%}" alt="로고" height="50px">
+            <img src="{%static 'img/Logo.png'%}" id="logo-img" alt="로고" height="50px">
         </div>
         <div class="header__center">
             <a href="{%url 'home'%}">
@@ -37,6 +37,14 @@
             }
             else {
                 button.innerHTML = "D";
+            }
+
+            var img = document.getElementById("logo-img");
+            if(img.innerHTML == "{%static 'img/Logo.png'%}") {
+                img.innerHTML = "{%static 'img/Logo_white.png'%}";
+            }
+            else {
+                img.innerHTML = "{%static 'img/Logo.png'%}";
             }
         }
     </script>
